--- a/VehicleCatalogMVCAssignment/Views/_ViewImports.cshtml
+++ b/VehicleCatalogMVCAssignment/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
 ﻿@using VehicleCatalogMVCAssignment.ViewModels
+@using VehicleCatalogMVCAssignment.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
