--- a/VehicleCatalogMVCAssignment/Views/Vehicle/List.cshtml
+++ b/VehicleCatalogMVCAssignment/Views/Vehicle/List.cshtml
@@ -13,9 +13,13 @@
         <img class="card-img-top" src="@vehicle_.ImageUrl" alt="VehicleImage">
         <div class="card-body">
             <h5 class="card-title">@(vehicle_.Brand + " " + vehicle_.Model )</h5>
-            <p class="card-text">@(vehicle_.VehicleClass.Name+" - "+ vehicle_.VehicleClass.Description)</p>
-            <a asp-controller="Vehicle" asp-action ="Details" asp-route-id ="@vehicle_.VinNo"
+            <p class="card-text">@(vehicle_.VehicleClass.Name+" - "+ vehicle_.Amount)</p>
+            <a asp-controller="Vehicle" asp-action="Details" asp-route-id="@vehicle_.VinNo"
                class="btn btn-primary">Vehicle  Details</a>
+            <a asp-controller="ShoppingCart"
+                   asp-action="AddToShoppingCart"
+                   asp-route-vinNo="@vehicle_.VinNo"
+               class="btn btn-primary">Add to Cart</a>
         </div>
     </div>
 }
