Initial page and routing for the add page

--- a/VehicleCatalogMVCAssignment/Views/ShoppingCart/Index.cshtml
+++ b/VehicleCatalogMVCAssignment/Views/ShoppingCart/Index.cshtml
@@ -11,20 +11,24 @@
 
     @foreach (var item in Model.ShoppingCartItems)
     {
-    <tr>
-        <td class="text-left"> @(item.Vehicle.Model +" "+ item.Vehicle.Brand)</td>
-        <td class="text-left"> @item.Amount</td>
-        <td>
-            <a asp-controller="ShoppingCart"
-               asp-action="RemoveItemFromCart"
-               asp-route-vinNo="@item.Vehicle"
-               class="btn btn-primary">Remove</a>
-        </td>
-    </tr>
+        <tr>
+            <td class="text-left"> @(item.Vehicle.Model +" "+ item.Vehicle.Brand)</td>
+            <td class="text-left"> @item.Amount</td>
+            <td>
+                <a asp-controller="ShoppingCart"
+                   asp-action="RemoveFromShoppingCart"
+                   asp-route-vinNo="@item.Vehicle.VinNo"
+                   class="btn btn-primary">Remove</a>
+            </td>
+        </tr>
     }
 
     <tr>
         <th> Total</th>
-        <th>@Model.GetShoppingCartTotal()</th>        
+        <th>@Model.GetShoppingCartTotal()</th>
     </tr>
 </table>
+
+<a asp-controller="Vehicle"
+   asp-action="List"   
+   class="btn btn-primary">Vehicle  List</a>
