--- a/VehicleCatalogMVCAssignment/Views/Vehicle/AddVehicle.cshtml
+++ b/VehicleCatalogMVCAssignment/Views/Vehicle/AddVehicle.cshtml
@@ -37,7 +37,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.VehicleClass)
-        @Html.TextBoxFor(m => m.VehicleClass, new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.VehicleClass, new SelectList(ViewBag.message, "VehicleCategoryID", "Name"), "Choose Vehicle type", new { @class = "form-control" })
     </div>
     <div class="form-group">
         <input type="submit" value="Add" class="btn btn-primary" />
