--- a/VehicleCatalogMVCAssignment/Views/Vehicle/AddVehicle.cshtml
+++ b/VehicleCatalogMVCAssignment/Views/Vehicle/AddVehicle.cshtml
@@ -1,4 +1,4 @@
-﻿@model VehicleCatalogMVCAssignment.Models.Vehicle
+﻿@model VehicleCatalogMVCAssignment.ViewModels.AddVehicleVM
 @{
     ViewBag.Title = "Add Vehicle";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -8,36 +8,36 @@
 
 <form asp-controller="Vehicle" asp-action="AddVehicle">
     <div class="form-group">
-        @Html.LabelFor(m => m.VinNo)
-        @Html.TextBoxFor(m => m.VinNo, new { @class = "form-control" })
+        @Html.LabelFor(m => m.NewVehicle.VinNo)
+        @Html.TextBoxFor(m => m.NewVehicle.VinNo, new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Brand)
-        @Html.TextBoxFor(m => m.Brand, new { @class = "form-control" })
+        @Html.LabelFor(m => m.NewVehicle.Brand)
+        @Html.TextBoxFor(m => m.NewVehicle.Brand, new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Model)
-        @Html.TextBoxFor(m => m.Model, new { @class = "form-control" })
+        @Html.LabelFor(m => m.NewVehicle.Model)
+        @Html.TextBoxFor(m => m.NewVehicle.Model, new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ModelYear)
-        @Html.TextBoxFor(m => m.ModelYear, new { @class = "form-control" })
+        @Html.LabelFor(m => m.NewVehicle.ModelYear)
+        @Html.TextBoxFor(m => m.NewVehicle.ModelYear, new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Amount)
-        @Html.TextBoxFor(m => m.Amount, new { @class = "form-control" })
+        @Html.LabelFor(m => m.NewVehicle.Amount)
+        @Html.TextBoxFor(m => m.NewVehicle.Amount, new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ImageUrl)
-        @Html.TextBoxFor(m => m.ImageUrl, new { @class = "form-control" })
+        @Html.LabelFor(m => m.NewVehicle.ImageUrl)
+        @Html.TextBoxFor(m => m.NewVehicle.ImageUrl, new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.IsAutomaticTransmission)
-        @Html.CheckBoxFor(m => m.IsAutomaticTransmission, new { @class = "form-control" })
+        @Html.LabelFor(m => m.NewVehicle.IsAutomaticTransmission)
+        @Html.CheckBoxFor(m => m.NewVehicle.IsAutomaticTransmission, new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.VehicleClass)
-        @Html.DropDownListFor(m => m.VehicleClass, new SelectList(ViewBag.message, "VehicleCategoryID", "Name"), "Choose Vehicle type", new { @class = "form-control" })
+        @Html.LabelFor(m => m.NewVehicle.VehicleClass)
+        @Html.DropDownListFor(m => m.SelectedCategory, new SelectList(ViewBag.message, "VehicleCategoryID", "Name"), "Choose Vehicle type", new { @class = "form-control" })
     </div>
     <div class="form-group">
         <input type="submit" value="Add" class="btn btn-primary" />
